# volume-cartographer

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .zenodo.json  Brewfile  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md
Reslicer/: CMakeLists.txt  reslicer.cpp
Reslicer/cpp/: reslicer.cpp  reslicer.h.gch
app_support/: CMakeLists.txt
app_support/src/: FetchSliceThread.cpp  GeneralOptions.cpp  GetMemorySize.cpp  ImageScrollArea.cpp
apps/: CMakeLists.txt  SliceImage.h  VCMain.cmake  VCTexture.cmake  cloth.cpp  layering.cpp  mesher.cpp  metadata.cpp  projection.cpp  projection2.cpp  render.cpp  segment.cpp
apps/Canny/: CMakeLists.txt  CannySegment.cpp  CannyThread.cpp  CannyThread.hpp  CannyViewer.cpp  CannyViewer.hpp  CannyViewerWindow.cpp  CannyViewerWindow.hpp  SliceCannyViewerWidget.cpp  SliceCannyViewerWidget.hpp  icon.icns
apps/Projection/: CMakeLists.txt  FetchSliceThread.cpp  FetchSliceThread.hpp  ImageScrollArea.cpp  ImageScrollArea.hpp  PPMProjectionThread.cpp  PPMProjectionThread.hpp  PPMProjectionViewerWidget.cpp  PPMProjectionViewerWidget.hpp  Projection.cpp  Projection.hpp  ProjectionSettingsWidget.cpp  ProjectionSettingsWidget.hpp  ProjectionViewer.cpp  ProjectionViewer.hpp  ProjectionViewerWindow.cpp  ProjectionViewerWindow.hpp  SliceProjectionThread.cpp  SliceProjectionThread.hpp  SliceProjectionViewerWidget.cpp  SliceProjectionViewerWidget.hpp  icon.icns
apps/VC-Texture/: CMakeLists.txt  GlobalValues.cpp  GlobalValues.h  GlobalValues.hpp  Global_Values.cpp  Global_Values.h  MainWindow.cpp  MainWindow.h  MainWindow.hpp  MyThread.cpp  MyThread.h  MyThread.hpp  Rendering.cpp  Rendering.hpp  SegmentationsViewer.cpp  SegmentationsViewer.h  (+10 more)
common/: CMakeLists.txt  datatypes.h  getMemorySize.cpp  getMemorySize.h  meshMath.cpp  meshMath.h  shapes.h  vc_datatypes.h  vc_defines.h
core/: CMakeLists.txt
doc/: CMakeLists.txt  CONTRIBUTORS.md  Doxyfile  Doxyfile.in  Modules.dox  VC-Doxygen-config-file  VC-Workflow.txt  citations.bib
docs/: CMakeLists.txt  Modules.dox  citations.bib
examples/: ACVDExample.cpp  CMakeLists.txt  LoremIpsumError.cpp  MakeNeuralNetTrainingData.cpp  ObjWriterExample.cpp  OrderedResamplingExample.cpp  ResliceAnalysis.cpp  StructureTensorClient.cpp  VerifyStructureTensor.cpp  abfExample.cpp  clothExample.cpp  collisionTest.cpp  coneExample.cpp  greedyExample.cpp  greedyProjectionMeshingExample.cpp  itk2vtkExample.cpp  lscmExample.cpp  objExporterExample.cpp  orderedPCDExample.cpp  orderedResamplingExample.cpp  parsingHelperExample.cpp  plyExporterExample.cpp  poissonExample.cpp  poissonReconstructionExample.cpp  rayTraceExample.cpp  resamplePointCloudExample.cpp  scaleMeshExample.cpp  smoothNormalsExample.cpp  smoothingExample.cpp  textureExample.cpp  textureFlattened.cpp  uvMapExample.cpp  volpkg.cpp
experimental/: CMakeLists.txt
graph/: CMakeLists.txt
mesh_editor/: C2DView.cpp  C2DView.h  C3DObj.h  C3DView.cpp  C3DView.h  CMakeLists.txt  CMesh.h  CMeshGL.cpp  CMeshGL.h  CPlyHelper.cpp  CSimpleNumEditBox.cpp  CSimpleNumEditBox.h  CWindow.cpp  CWindow.h  CXCurve.cpp  CXCurve.h  HBase.h  MeshEditorHeader.h  UDataManipulateUtils.cpp  UDataManipulateUtils.h  UObjHelper.cpp  UObjHelper.h  main.cpp  mathUtils.h  meshEditor.pro
meshing/: ACVD.cpp  ACVD.h  CMakeLists.txt  CalculateNormals.cpp  CalculateNormals.h  OrderedResampling.cpp  OrderedResampling.h  calculateNormals.cpp  calculateNormals.h  cloth.cpp  cloth.h  deepCopy.cpp  deepCopy.h  greedyProjectionMeshing.cpp  greedyProjectionMeshing.h  itk2bullet.cpp  itk2bullet.h  itk2vtk.cpp  itk2vtk.h  mesher.cpp  orderedPCDMesher.cpp  orderedPCDMesher.h  orderedResampling.cpp  orderedResampling.h  poissonReconstruction.cpp  poissonReconstruction.h  rayTrace.cpp  rayTrace.h  resamplePointCloud.cpp  resamplePointCloud.h  scaleMesh.cpp  scaleMesh.h  smoothNormals.cpp  smoothNormals.h
pathgen/: CMakeLists.txt  CQtImageViewer.cpp  CQtImageViewer.h  bezierUtils.cpp  bezierUtils.h  main.cpp  pathGen.cpp  timeUtils.cpp  timeUtils.h
python/: CMakeLists.txt  setup.py.in
region/: CMakeLists.txt  main.cpp  region.cpp  region.h  voxel.cpp  voxel.h
scalpel/: CMakeLists.txt  Makefile  scalpel.cpp
segmentation/: CMakeLists.txt  chain.cpp  chain.h  field.cpp  field.h  particle.cpp  particle.h  segment.cpp  slice.cpp  slice.h  structureTensorParticleSim.cpp  structureTensorParticleSim.h
simulation/: CMakeLists.txt  simulation.cpp
testing/: CMakeLists.txt  CMakeLists.txt.bak  parsingHelpers.cpp  parsingHelpers.h
texture/: CMakeLists.txt  CMesh.h  CPlyHelper.cpp  CPoint.h  CVec.h  Makefile  denoise_tvl1.h  main.cpp  mesh_normalize.cpp  pathGen.cpp  sliceIntersection.cpp  sliceIntersection.h  sliceProjection.cpp
texture_old/: CMakeLists.txt  CPlyHelper.h  QuickSort.h  denoise_tvl1.cpp  main.cpp  sliceIntersection.cpp  sliceProjection.cpp
texturing/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  .main.cpp.swo  .main.cpp.swp  .meshToOBJ.cpp.swp  .normals.cpp.swp  .texturingUtils.h.swp  AngleBasedFlattening.cpp  AngleBasedFlattening.h  CMakeLists.txt  ClothModelingUVMapping.cpp  ClothModelingUVMapping.h  LeastSquaresConformalMapping.cpp  QuickSort.h  UPointMapping.cpp  UPointMapping.h  abf.cpp  abf.h  abf_math.cpp  abf_math.h  blender_abf.c  blender_abf.h  checkPtInTriangleUtil.h  cloth.cpp  clothModelingUV.cpp  clothModelingUV.h  compositeTexture.cpp  compositeTexture.h  compositeTextureV2.cpp  compositeTextureV2.h  debugParser.txt  layering.cpp  lscm.cpp  lscm.h  main.cpp  meshUtils.cpp  meshUtils.h  objExporterExample.cpp  plyHelper.cpp  plyHelper.h  (+8 more)
utils/: CMakeLists.txt  MutualInformation.cxx  README.md  addScale.cpp  analyze.cpp  automask.cpp  batch_pipeline.pl  conform.cpp  csv2uv.cpp  invertCloud.cpp  mappingExtractor.cpp  mappingViewer.cpp  metadata.cpp  seg2Printable.cpp  splitcloud.cpp  surfarea.cpp  txt2pcd.cpp  zxy2xyz.cpp
volumepkg/: CMakeLists.txt  Slice.cpp  Slice.h  picojson.h  reslice.cpp  reslice.h  slicecache.h  volumepkg.cpp  volumepkg.h  volumepkg_version.h  volumepkgcfg.cpp  volumepkgcfg.h
(+1441 files in other folders)
